log_output_generator/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-app-service
spec:
  type: ClusterIP
  selector:
    app: log-output-app
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 5001
